another layout fix for Archive landing pages: wrap long lines like list of Authors instead of falling back to horizontal scrool bars.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@5372 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/assets/css/V3/style.css
+++ b/mig/assets/css/V3/style.css
@@ -777,6 +777,10 @@ code {
     color: silver;
 }
 
+/* Wrap long lines by default e.g on Archive publish pages to avoid scroll */
+pre:not(pre.codeblock) {
+    white-space: break-spaces;
+}
 /* Setup commands etc. */
 pre.codeblock {
     color: #666;
